Multiscatter GGX regression with non-zero roughness and a bump texture on a non-manifold object #96417

Closed
opened 2022-03-14 04:13:00 +01:00 by Lt Knb · 9 comments

System Information
Operating system: Windows 10 1909
Graphics card: GTX 1070 496.13

Blender Version
Broken: 3.1 Stable
Worked: 3.0.1
Caused by ae44070341

Short description of error
When set to Multiscatter GGX, a non-manifold object with a bump texture and a non-zero roughness behaves as if light "passes through it" (the softboxes).
The stripes on the curved plane can only be fixed by making it manifold, afaik (It's a separate issue, I guess)

Expected behavior, 3.0.1
MSGGX 3.0.1.png

3.1
MSGGX.png

Exact steps for others to reproduce the error
Press F12 in my test file
MSGGX.blend

**System Information** Operating system: Windows 10 1909 Graphics card: GTX 1070 496.13 **Blender Version** Broken: 3.1 Stable Worked: 3.0.1 Caused by ae44070341 **Short description of error** When set to Multiscatter GGX, a non-manifold object with a bump texture and a non-zero roughness behaves as if light "passes through it" (the softboxes). The stripes on the curved plane can only be fixed by making it manifold, afaik (It's a separate issue, I guess) Expected behavior, 3.0.1 ![MSGGX 3.0.1.png](https://archive.blender.org/developer/F12925931/MSGGX_3.0.1.png) 3.1 ![MSGGX.png](https://archive.blender.org/developer/F12925932/MSGGX.png) **Exact steps for others to reproduce the error** Press F12 in my test file [MSGGX.blend](https://archive.blender.org/developer/F12925961/MSGGX.blend)
Author

Added subscriber: @Lt-Knb

Added subscriber: @Lt-Knb
Member

Added subscribers: @leesonw, @brecht, @Alaska

Added subscribers: @leesonw, @brecht, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this issue with the setup below.

I should note that this issue was caused by this commit: ae44070341

CC @brecht and @leesonw

System Information
Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54
Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-12 10:29, hash: f6b7396610

I can reproduce this issue with the setup below. I should note that this issue was caused by this commit: ae44070341 CC @brecht and @leesonw **System Information** Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-12 10:29, hash: `f6b7396610`
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by eb605ba788

This issue was referenced by eb605ba78808f2bba73267548f4949001391538e

This issue was referenced by af51b0d8d8

This issue was referenced by af51b0d8d8804e7a2d3166597f688f18a463873f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-03-15 16:29:20 +01:00
Author

This comment was removed by @Lt-Knb

*This comment was removed by @Lt-Knb*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96417
No description provided.