Fix T96417: Cycles issue with multiscatter GGX and self intersection avoidance

When the light direction is not pointing away from the geometric normal and
there is a shadow terminator offset, self intersection is supposed to occur.